# imiq

./: .gitignore  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  GOOGLE_SHEETS_DEPLOYMENT.md  GOOGLE_SHEETS_SETUP.md  INTEGRATION_SUMMARY.md  README.md  README_COMPLETE.md  README_DEPLOYMENT.md  analyze_and_test.py  app.py  check_userids.py  check_users.py  complete_sheet_discovery.py  comprehensive_flow_test.py  configure_google_sheets.py  create_admin.py  debug_auth.py  debug_storage.py  debug_user_orders.py  deploy-verify.sh  direct_read_sheets.py  discover_sheets.py  fix_admin_user.py  fix_password.py  flow_verification.py  generate_deployment_vars.py  google_sheets_discovery.py  health-check.sh  inspect_admin_user.py  kpis.py  list_users.py  master_test_output.txt  master_test_suite.py  pyproject.toml  read_excel.py  read_sheet_structure.py  requirements.txt  (+32 more)
.streamlit/: config.toml
imiq/: __init__.py  admin.py  auth.py  business_analytics.py  inventory.py  kpis.py  orders.py  performance.py  settings.py  shipments.py  storage.py  ui_components.py  ui_components_backup.py  utils.py
tests/: test_auth.py  test_storage.py
