[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crazyshopperz"
version = "1.0.0"
description = "Comprehensive order management and e-commerce solution with real-time analytics"
authors = [
    {name = "CrazyShopperz Team"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Business",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "openpyxl>=3.1.0",
    "google-auth>=2.23.0",
    "gspread>=5.10.0",
    "filelock>=3.12.0",
    "python-dateutil>=2.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/crazyshopperz/crazyshopperz"
Repository = "https://github.com/crazyshopperz/crazyshopperz.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["imiq*"]